--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Spline JS Demo</title>
+		<title>Spline Demo</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script data-main="js/index" src="node_modules/requirejs/require.js"></script>
 	</head>
