--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
 	</head>
 	<body>
 		<main>
-			<h1>Canvas Spline Tool Demo</h1>
+			
 			
 			<div id="options" class="options noselect">
-				
+				<h1>Spline Tool Demo</h1>
+				<label for="segments"><span>segments</span></label>
 				<div class="slider">
 					<div class="component">
 						<div class="label-contain"><label><span class="value"></span></label></div>
 						<input id="segments" type="range" value="12" min="1" max="20" />
 					</div>
-					<label for="segments">segments</label>
 				</div>
+				
+				<label for="tension"><span>tension</span></label>
 				<div class="slider">
 					<div class="component">
 						<div class="label-contain"><label><span class="value"></span></label></div>
 						<input id="tension" type="range" data-fractional="true" value="50" min="-100" max="100"/>
 					</div>
-					<label for="tension">tension</label>
 				</div>
 				<div class="panel">
 					<div class="checkbox">
