changing to es6 modules

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	</head>
 	<body>
 		<main>
-			
-			
 			<div id="options" class="options noselect">
 				<h1>Spline Tool Demo</h1>
 				<label for="segments"><span>segments</span></label>
@@ -40,8 +38,8 @@
 					</div>
 				</div>
 			</div>
-			<canvas class="noselect" width="800" height="450">Double click to add a point.</canvas>
+			<canvas class="canvas noselect" width="800" height="450">Double click to add a point.</canvas>
 		</main>
-		<script data-main="js/index" src="node_modules/requirejs/require.js"></script>
+		<script src="build/bundle.js"></script>
 	</body>
 </html>
