--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 				</div>
 			</div>
-			<canvas class="canvas noselect" width="800" height="450">Double click to add a point.</canvas>
+			<canvas class="canvas noselect" width="800" height="450">Click to add a point.</canvas>
 		</main>
 		<script src="build/bundle.js"></script>
 	</body>
