--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	<body>
+		<main></main>
 		<script src="build/bundle.js"></script>
 	</body>
 </html>
